*SVN*

* render(:partial => true) is identical to the behavior of the deprecated render_partial()

* Fixed render(:partial => "...") to use an empty Hash for the local assigns #1365

* Fixed Caching::Fragments::FileStore.delete to not raise an exception if the delete fails.

* Deprecated all render_* methods in favor of consolidating all rendering behavior in Base#render(options). This enables more natural use of combining options, such as layouts. Examples:

    +---------------------------------------------------------------+-------------------------------------------------------+
    | BEFORE                                                        | AFTER                                                 |
    +---------------------------------------------------------------+-------------------------------------------------------+
    | render_with_layout "weblog/show", "200 OK", "layouts/dialog"  | render :action => "show", :layout => "dialog"         |
    | render_without_layout "weblog/show"                           | render :action => "show", :layout => false            |
    | render_action "error", "404 Not Found"                        | render :action => "error", :status => "404 Not Found" |
    | render_template "xml.div('stuff')", "200 OK", :rxml           | render :inline => "xml.div('stuff')", :type => :rxml  |
    | render_text "hello world!"                                    | render :text => "hello world!"                        |
    | render_partial_collection "person", @people, nil, :a => 1     | render :partial => "person", :collection => @people,  |
    |                                                               |        :locals => { :a => 1 }                         |
    +---------------------------------------------------------------+-------------------------------------------------------+      

* Deprecated redirect_to_path and redirect_to_url in favor of letting redirect_to do the right thing when passed either a path or url.
